--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -83,7 +83,7 @@
                                             
                                             <div class="col-md-12 card mb-4  mt-3 ">
 
-                                              <div class="card-body">
+                                              <div >
                                                 {% if new_comment %}
                                                 <div class="alert alert-success" role="alert">
                                                   Your comment is awaiting moderation
