--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -93,10 +93,15 @@
                                                 <form method='POST' enctype='multipart/form-data' novalidate>{% csrf_token %}
                                                   
                                                   {% comment %} {{ comment_form.as_p }} {% endcomment %}
-                                                <div class="form-group row">
+                                                <div class="form-group">
                                                   <label class="form-label">Name</label>
                                                   {% render_field comment_form.name class="content" placeholder="Your name" %}
                                                 </div>
+                                                <div class="form-group row">
+                                                  <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                                                  <div class="col-sm-10">
+                                                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                                                  </div>
                                                 <div class="form-group">
                                                   <label class="form-label">Email</label>
                                                   {% render_field comment_form.email class="content" placeholder="Your email." %}
