--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -100,6 +100,7 @@
                                                 <div class="form-group row">
                                                   <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
                                                   <div class="col-sm-10">
+                                                    {% render_field comment_form.name class="content" placeholder="Your name" %}
                                                     <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                                                   </div>
                                                 <div class="form-group">
