--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -97,19 +97,19 @@
                                                 <div class="form-group row">
                                                   <label for="inputname" class="col-sm-2 col-form-label">Name</label>
                                                   <div class="col-sm-10">
-                                                    {% render_field comment_form.name class="content" placeholder="Your name" %}
+                                                    {% render_field comment_form.name class="form-control" placeholder="Your name" %}
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="inputemail" class="col-sm-2 col-form-label">Email</label>
                                                     <div class="col-sm-10">
-                                                      {% render_field comment_form.email class="content" placeholder="Your email" %}
+                                                      {% render_field comment_form.email class="form-control" placeholder="Your email" %}
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                   <label for="inputPassword" class="col-sm-2 col-form-label">Comment</label>
                                                   <div class="col-sm-10">
-                                                    {% render_field comment_form.body class="content" placeholder="Write your comment here" %}
+                                                    {% render_field comment_form.body class="form-control" placeholder="Write your comment here" %}
                                                     <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                                                   </div>
                                                 </div>
