--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -110,10 +110,9 @@
                                                   <label for="inputPassword" class="col-sm-2 col-form-label">Comment</label>
                                                   <div class="col-sm-10">
                                                     {% render_field comment_form.body class="form-control" placeholder="Write your comment here" %}
-                                                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                                                   </div>
                                                 </div>
-                                                  <button type="submit" class="btn btn-primary  btn-lg">Post Comment</button>
+                                                  <button type="submit" class="btn btn-danger  btn-lg">Post Comment</button>
                                                 </form>
                                                 {% endif %}
                                               </div>
