--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -50,7 +50,7 @@
                                                         <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="singleblog.html" rel="tag">{{post.category}}</a>
                                                     </span>
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-comment-number">
-                                                        <span class="gdlr-core-head"><i class="icon_comment_alt"></i></span><a href="singleblog.html">0 </a>
+                                                        <span class="gdlr-core-head"><i class="icon_comment_alt"></i></span><a href="singleblog.html">{{ comments.count }} </a>
                                                     </span>
                                                 </div>
                                             </div>
