--- a/mainwebsite/templates/mainwebsite/contact.html
+++ b/mainwebsite/templates/mainwebsite/contact.html
@@ -108,7 +108,7 @@
                                                                 <span class="gdlr-core-icon-list-icon-wrap gdlr-core-left"><i class="gdlr-core-icon-list-icon fa fa-envelope-o" style="font-size: 19px; width: 19px;"></i></span>
                                                                 <div class="gdlr-core-icon-list-content-wrap">
                                                                     <span class="gdlr-core-icon-list-content" style="font-size: 18px;">
-                                                                        <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="23404c4d57424057634a4d454a4d4a57465453574b464e460d404c4e">{{contact.email}}</a>
+                                                                        <a href="#">{{contact.email}}</a>
                                                                     </span>
                                                                 </div>
                                                             </li>
