--- a/mainwebsite/templates/mainwebsite/services.html
+++ b/mainwebsite/templates/mainwebsite/services.html
@@ -48,12 +48,11 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-custom-menu-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-style-2" style="padding-bottom: 15px; font-size: 19px;">
                                         <ul id="menu-services" class="menu">
-                                            <li class="menu-item"><a href="asset-management.html">Asset Management</a></li>
-                                            <li class="menu-item"><a href="smart-manufacturing.html">Smart Manufacturing</a></li>
-                                            <li class="menu-item"><a href="private-equity-2.html">Private Equity</a></li>
-                                            <li class="menu-item"><a href="insurance.html">Insurance</a></li>
-                                            <li class="menu-item"><a href="risk-management.html">Risk Management</a></li>
-                                            <li class="menu-item"><a href="merge-acquisition.html">Merge &amp; Acquisition</a></li>
+                                            <li class="menu-item"><a href="#0">EPE Foam</a></li>
+                                            <li class="menu-item"><a href="#0">Cushions</a></li>
+                                            <li class="menu-item"><a href="#0">Mattresses</a></li>
+                                            <li class="menu-item"><a href="#0">Packages</a></li>
+                                            <li class="menu-item"><a href="#0">Mat</a></li>
                                         </ul>
                                     </div>
                                 </div>
