--- a/mainwebsite/templates/mainwebsite/services.html
+++ b/mainwebsite/templates/mainwebsite/services.html
@@ -48,11 +48,11 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-custom-menu-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-style-2" style="padding-bottom: 15px; font-size: 19px;">
                                         <ul id="menu-services" class="menu">
-                                            <li class="menu-item"><a href="#0">EPE Foam</a></li>
-                                            <li class="menu-item"><a href="#0">Cushions</a></li>
-                                            <li class="menu-item"><a href="#0">Mattresses</a></li>
-                                            <li class="menu-item"><a href="#0">Packages</a></li>
-                                            <li class="menu-item"><a href="#0">Mat</a></li>
+                                            <li class="menu-item"><a href="JavaScript:Void(0);">EPE Foam</a></li>
+                                            <li class="menu-item"><a href="JavaScript:Void(0);">Cushions</a></li>
+                                            <li class="menu-item"><a href="JavaScript:Void(0);">Mattresses</a></li>
+                                            <li class="menu-item"><a href="JavaScript:Void(0);">Packages</a></li>
+                                            <li class="menu-item"><a href="JavaScript:Void(0);">Mat</a></li>
                                         </ul>
                                     </div>
                                 </div>
