--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -21,7 +21,7 @@
                         <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                             <div class="gdlr-core-title-item-title-wrap">
                                 <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 75px; font-weight: 600; letter-spacing: 0px; text-transform: none; color: #ffffff;">
-                                    {{post.title}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
+                                    {{posts.title}}<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                 </h3>
                             </div>
                         </div>
@@ -41,13 +41,13 @@
                                             <div class="gdlr-core-blog-full-head-right">
                                                 <div class="gdlr-core-blog-info-wrapper gdlr-core-skin-divider">
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date">
-                                                        <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="#">{{post.created}}</a>
+                                                        <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="#">{{posts.created}}</a>
                                                     </span>
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-author">
-                                                        <span class="gdlr-core-head">By</span><a href="#" title="Posts by John Smith" rel="author">{{post.author}}</a>
+                                                        <span class="gdlr-core-head">By</span><a href="#" title="Posts by John Smith" rel="author">{{posts.author}}</a>
                                                     </span>
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-category">
-                                                        <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="singleblog.html" rel="tag">{{post.category}}</a>
+                                                        <span class="gdlr-core-head"><i class="icon_folder-alt"></i></span><a href="singleblog.html" rel="tag">{{posts.category}}</a>
                                                     </span>
                                                     <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-comment-number">
                                                         <span class="gdlr-core-head"><i class="icon_comment_alt"></i></span><a href="singleblog.html">{{ comments.count }} </a>
@@ -56,7 +56,7 @@
                                             </div>
                                         </div>
                                         <div class="gdlr-core-blog-content clearfix">
-                                            {{post.my_field|safe}}
+                                            {{posts.my_field|safe}}
                                             <div class="clear"></div>
                                             
                                         </div>
