--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -11,7 +11,7 @@
             <div class="gdlr-core-pbf-background-wrap" style="background-color: #383838;">
                 <div
                     class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                    style="opacity: 0.4; background-image: url({{post.image.url}}); background-size: cover; background-position: center;"
+                    style="opacity: 0.4; background-image: url({{posts.image.url}}); background-size: cover; background-position: center;"
                     data-parallax-speed="0.3"
                 ></div>
             </div>
@@ -132,20 +132,20 @@
                                 <h1 class="corzo-widget-title corzo-with-divider">Recent Articles</h1>
                                 <span class="clear"></span>
                                 <div class="gdlr-core-recent-post-widget-wrap gdlr-core-style-4">
-                                    {% for post in posts|slice:':3'  %}
+                                    {% for blog in blogs|slice:':3'  %}
                                     <div class="gdlr-core-recent-post-widget clearfix">
                                         <div class="gdlr-core-recent-post-widget-thumbnail gdlr-core-media-image">
                                             <a href="{% url 'post_detail' slug=blog.slug %}">
-                                                <img src="{{post.image.url}} " alt="" width="150" height="150" title="Conference" />
+                                                <img src="{{blog.image.url}} " alt="" width="150" height="150" title="Conference" />
                                             </a>
                                         </div>
                                         <div class="gdlr-core-recent-post-widget-content">
                                             <div class="gdlr-core-recent-post-widget-info">
                                                 <span class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date">
-                                                    <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="{% url 'post_detail' slug=blog.slug %}">{{post.created}}</a>
+                                                    <span class="gdlr-core-head"><i class="icon_clock_alt"></i></span><a href="{% url 'post_detail' slug=blog.slug %}">{{blog.created}}</a>
                                                 </span>
                                             </div>
-                                            <div class="gdlr-core-recent-post-widget-title gdlr-core-title-font"><a href="{% url 'post_detail' slug=blog.slug %}">{{post.title}}</a></div>
+                                            <div class="gdlr-core-recent-post-widget-title gdlr-core-title-font"><a href="{% url 'post_detail' slug=blog.slug %}">{{blog.title}}</a></div>
                                         </div>
                                     </div>
                                     {% endfor %}
