--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -1,6 +1,7 @@
 {% extends "mainwebsite/base/base.html" %}
 {% load static  %}
 {% load crispy_forms_tags %}
+{% load tag_manager %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -154,7 +155,7 @@
                             </div>
                             
                             <div id="tag_cloud-1" class="widget widget_tag_cloud corzo-widget">
-                                <h1 class="corzo-widget-title corzo-with-divider">Tag Cloud</h1>
+                                <h1 class="corzo-widget-title corzo-with-divider">Tag</h1>
                                 <span class="clear"></span>
                                 <div class="tagcloud">
                                     {% for tag in tags %}
