--- a/mainwebsite/templates/dashboard/index.html
+++ b/mainwebsite/templates/dashboard/index.html
@@ -21,7 +21,7 @@
 							<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 ">
 								<div class="card overflow-hidden">
 									<div class="card-header">
-										<h3 class="card-title">Total Membership</h3>
+										<h3 class="card-title">Total Visits</h3>
 										<div class="card-options"> <a class="btn btn-sm btn-primary" href="#">View</a> </div>
 									</div>
 									<div class="card-body ">
@@ -36,7 +36,7 @@
 							<div class=" col-sm-12 col-md-6 col-lg-6 col-xl-3">
 								<div class="card overflow-hidden">
 									<div class="card-header">
-										<h3 class="card-title">Total Visitors</h3>
+										<h3 class="card-title">Monthly Visits</h3>
 										<div class="card-options"> <a class="btn btn-sm btn-secondary" href="#">View</a> </div>
 									</div>
 									<div class="card-body ">
@@ -51,7 +51,7 @@
 							<div class=" col-sm-12 col-md-6 col-lg-6 col-xl-3">
 								<div class="card overflow-hidden">
 									<div class="card-header">
-										<h3 class="card-title">Music Groups</h3>
+										<h3 class="card-title">Users</h3>
 										<div class="card-options"> <a class="btn btn-sm btn-warning" href="#">View</a> </div>
 									</div>
 									<div class="card-body ">
@@ -68,7 +68,7 @@
 							<div class="col-sm-12 col-md-6 col-lg-6 col-xl-3 ">
 								<div class="card overflow-hidden">
 									<div class="card-header">
-										<h3 class="card-title">Church Attendance</h3>
+										<h3 class="card-title">Session Duration</h3>
 										<div class="card-options"> <a class="btn btn-sm btn-info" href="#">View</a> </div>
 									</div>
 									<div class="card-body ">
@@ -77,256 +77,6 @@
 											<div class="progress-bar bg-info w-25" role="progressbar"></div>
 										</div>
 										<div class=""><i class="fa fa-caret-up text-success"></i>Date</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xl-8 col-lg-12 col-md-12">
-								<div class="card">
-									<div class="card-header">
-										<h3 class="card-title">Database</h3>
-									</div>
-									<div class="card-body">
-										<div class="chart-wrapper">
-											<canvas id="sales-status" class="chart-dropshadow"></canvas>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-xl-4 col-lg-12 col-md-12">
-								<div class="card">
-									<div class="card-header">
-										<h3 class="card-title">Church Leadership</h3>
-									</div>
-									<div class="card-body">
-										<div class="activity">
-											<img src="../assets/images/faces/male/24.jpg" alt="" class="img-activity">
-											<div class="time-activity">
-												<div class="item-activity">
-													<p class="mb-0"><b>Adam	Berry</b> Add Modren Houses <b> List</b></p>
-													<small class="text-muted ">30 mins ago</small>
-												</div>
-											</div>
-											<img src="../assets/images/faces/female/10.jpg" alt="" class="img-activity">
-											<div class="time-activity">
-												<div class="item-activity">
-													<p class="mb-0"><b>Irene Hunter</b> Add Farm Houses  <b>List</b></p>
-													<small class="text-muted ">1 days ago</small>
-												</div>
-											</div>
-											<img src="../assets/images/faces/male/4.jpg" alt="" class="img-activity">
-											<div class="time-activity">
-												<div class="item-activity">
-													<p class="mb-0"><b>John	Payne</b> Add new Offices <b>List</b></p>
-													<small class="text-muted ">3 days ago</small>
-												</div>
-											</div>
-											<img src="../assets/images/faces/male/4.jpg" alt="" class="img-activity">
-											<div class="time-activity">
-												<div class="item-activity">
-													<p class="mb-0"><b>John	Payne</b> Add new Offices <b>List</b></p>
-													<small class="text-muted ">3 days ago</small>
-												</div>
-											</div>
-											<img src="../assets/images/faces/female/8.jpg" alt="" class="img-activity">
-											<div class="time-activity mb-0">
-												<div class="item-activity mb-0">
-													<p class="mb-0"><b>Julia Hardacre</b> Add a new Deluxe  <b>Flats</b></p>
-													<small class="text-muted ">5 days ago</small>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-						    <div class="col-xl-4 col-lg-12 col-md-12">
-								<div class="card">
-									<div class="card-header">
-										<h3 class="card-title">Incoming Birthdays</h3>
-									</div>
-									<div class="card-body">
-										<div class="chats-wrap">
-											<div class="chat-details p-2">
-												<h6 class="mb-0">
-													<span class="font-weight-normal">Member name</span>
-													<span class="float-right p-1">Date</span>
-												</h6>
-												<div class="progress progress-sm mt-3">
-													<div class="progress-bar progress-bar-striped progress-bar-animated bg-success w-35" ></div>
-												</div>
-											</div>
-											<div class="chat-details p-2">
-												<h6 class="mb-0">
-													<span class="font-weight-normal">Satisfied</span>
-													<span class="float-right p-1">82%</span>
-												</h6>
-												<div class="progress progress-sm mt-3">
-													<div class="progress-bar progress-bar-striped progress-bar-animated bg-primary w-75"></div>
-												</div>
-											</div>
-											<div class="chat-details p-2">
-												<h6 class="mb-0">
-													<span class="font-weight-normal">Excellent</span>
-													<span class="float-right p-1">89%</span>
-												</h6>
-												<div class="progress progress-sm mt-3">
-													<div class="progress-bar progress-bar-striped progress-bar-animated bg-secondary w-65"></div>
-												</div>
-											</div>
-											<div class="chat-details p-2">
-												<h6 class="mb-0">
-													<span class="font-weight-normal">Average</span>
-													<span class="float-right p-1">40%</span>
-												</h6>
-												<div class="progress progress-sm mt-3">
-													<div class="progress-bar progress-bar-striped progress-bar-animated bg-warning w-80"></div>
-												</div>
-											</div>
-											<div class="chat-details p-2">
-												<h6 class="mb-0">
-													<span class="font-weight-normal">Unsatisfied</span>
-													<span class="float-right p-1">20%</span>
-												</h6>
-												<div class="progress progress-sm mt-3">
-													<div class="progress-bar progress-bar-striped progress-bar-animated bg-info w-80"></div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12 col-lg-6 col-xl-4">
-								<div class="card">
-									<div class="card-header border-bottom">
-										<h5 class="card-title">Sales Summary</h5>
-									</div>
-									<div class="card-body">
-										<div class="clearfix row mb-4">
-											<div class="col">
-												<div class="float-left">
-													<h5 class="mb-0"><strong>Total Revenue</strong></h5>
-													<small class="text-muted">weekly profit</small>
-												</div>
-											</div>
-											<div class="col">
-												<div class="float-right">
-													<h4 class="font-weight-bold mb-0 mt-2 text-primary">$15300</h4>
-												</div>
-											</div>
-										</div>
-										<div class="clearfix row mb-4">
-											<div class="col">
-												<div class="float-left">
-													<h5 class="mb-0"><strong>Total Tax</strong></h5>
-													<small class="text-muted">weekly profit</small>
-												</div>
-											</div>
-											<div class="col">
-												<div class="float-right">
-													<h4 class="font-weight-bold mt-2 mb-0 text-success">$1625</h4>
-												</div>
-											</div>
-										</div>
-										<div class="clearfix row mb-4">
-											<div class="col">
-												<div class="float-left">
-													<h5 class="mb-0"><strong>Total Profits</strong></h5>
-													<small class="text-muted">weekly profit</small>
-												</div>
-											</div>
-											<div class="col">
-												<div class="float-right">
-													<h4 class="font-weight-bold mt-2 mb-0 text-warning">70%</h4>
-												</div>
-											</div>
-										</div>
-										<div class="clearfix row mb-4">
-											<div class="col">
-												<div class="float-left">
-													<h5 class="mb-0"><strong>Total Income</strong></h5>
-													<small class="text-muted">weekly profit</small>
-												</div>
-											</div>
-											<div class="col">
-												<div class="float-right">
-													<h4 class="font-weight-bold mt-2 mb-0 text-danger">50%</h4>
-												</div>
-											</div>
-										</div>
-										<div class="clearfix row mb-0">
-											<div class="col">
-												<div class="float-left">
-													<h5 class="mb-0"><strong>Total Loss</strong></h5>
-													<small class="text-muted">weekly profit</small>
-												</div>
-											</div>
-											<div class="col">
-												<div class="float-right">
-													<h4 class="font-weight-bold mt-2 mb-0 text-secondary">30%</h4>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-xl-4 col-lg-12 col-md-12">
-								<div class="card">
-									<div class="card-header">
-										<h3 class="card-title">Assignments</h3>
-										<div class="card-options">
-											<a class="btn btn-sm btn-primary " href="#"><i class="fa fa-plus"></i> Add Task</a>
-										</div>
-									</div>
-									<div class="card-body">
-										<div class="custom-controls-stacked checklist-task">
-											<label class="custom-control custom-checkbox mb-3 checklist-desc">
-												<input type="checkbox" class="custom-control-input" name="example-checkbox1" value="option1" checked="">
-												<span class="custom-control-label">vero eos et accusamus et iusto odio "church member name"</span>
-												<span class="check-data d-flex mt-1">
-													<span class="text-muted">Deadline Date</span>
-													<span class="check-icon ml-auto">
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Edit"><i class="fa fa-pencil-square-o "></i> </span>
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="fa fa-trash-o"></i></span>
-													</span>
-												</span>
-											</label>
-											<label class="custom-control custom-checkbox mb-3 checklist-desc">
-												<input type="checkbox" class="custom-control-input" name="example-checkbox2" value="option2">
-												<span class="custom-control-label"> et iusto odio dignissimos ducimus</span>
-												<span class="check-data d-flex mt-1">
-													<span class="text-muted">Completed 8h ago</span>
-													<span class="check-icon ml-auto">
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Edit"><i class="fa fa-pencil-square-o "></i> </span>
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="fa fa-trash-o"></i></span>
-													</span>
-												</span>
-											</label>
-											<label class="custom-control custom-checkbox mb-3 checklist-desc">
-												<input type="checkbox" class="custom-control-input" name="example-checkbox3" value="option3" checked="">
-												<span class="custom-control-label"> eos  accusamus  iusto odio dignissimos </span>
-												<span class="check-data d-flex mt-1">
-													<span class="text-muted">Completed 4h ago</span>
-													<span class="check-icon ml-auto">
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Edit"><i class="fa fa-pencil-square-o "></i> </span>
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="fa fa-trash-o"></i></span>
-													</span>
-												</span>
-											</label>
-											<label class="custom-control custom-checkbox checklist-desc">
-												<input type="checkbox" class="custom-control-input" name="example-checkbox4" value="option4">
-												<span class="custom-control-label">vet accusamus et iusto odio dignissimos </span>
-												<span class="check-data d-flex mt-1">
-													<span class="text-muted">Completed 5h ago</span>
-													<span class="check-icon ml-auto">
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Edit"><i class="fa fa-pencil-square-o "></i> </span>
-														<span class="text-muted" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="fa fa-trash-o"></i></span>
-													</span>
-												</span>
-											</label>
-										</div>
 									</div>
 								</div>
 							</div>
