--- a/mainwebsite/templates/dashboard/base.html
+++ b/mainwebsite/templates/dashboard/base.html
@@ -98,7 +98,7 @@
                   <div class="container">
                       <div class="row align-items-center flex-row-reverse">
                           <div class="col-md-12 col-sm-12 mt-3 mt-lg-0 text-center">
-                              Copyright © 2022 <a href="#">Zhonghua Company Limited</a>. Designed by <a href="https://karlowebsytz.com">Karlo Websytz</a> All rights reserved.
+                              Copyright © <script>document.write(new Date().getFullYear())</script> <a href="#">Zhonghua Company Limited</a>. Designed by <a href="https://karlowebsytz.com">Karlo Websytz</a> All rights reserved.
                           </div>
                       </div>
                   </div>
